2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 2810220:
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fixed offset problem with maximalBarWidth,
    (drawVerticalItem): Likewise;

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3428870:
    * org/jfree/chart/annotations/TextAnnotation.java
    (setRotationAnchor): Added missing argument check, Bug #3428870;

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3429707:
    * org/jfree/chart/axis/LogAxis.java
    (refreshTicksHorizontal): Fixed endless loop for 0 TickUnit,
    (refreshTicksVertical): Likewise;

2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3072674:
    * org/jfree/data/statistics/DefaultStatisticalCategoryDataset.java
    (getRangeLowerBound): Check for NaN,
    (getRangeUpperBound): Likewise,
    (getRangeBounds): Call getRangeLowerBound() and getRangeUpperBound().

2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3026341:
    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (findDomainBounds): Check for null,
    (findRangeBounds): Likewise.

2011-10-18  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3190615:
    * org/jfree/data/xy/CategoryTableXYDataset.java
    (clear): New method.

2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/plot/PiePlot.java
    (drawItem): Use new Paint lookup,
    (getArcCenter): New protected method,
    (lookupSectionPaint): Handle GradientPaint.

2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/util/ParamChecks.java: New class;
    * org/jfree/data/general/Series.java
    (vetoableChangeSupport): New field,
    (Series(Comparable, String)): Initialise vetoableChangeSupport,
    (setKey): Fire vetoable property change,
    (clone): Initialise vetoableChangeSupport,
    (addVetoableChangeListener): New method;