@@ -47,6 +47,7 @@ import java.awt.GradientPaint;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
+import org.jfree.chart.StandardChartTheme;
 import org.jfree.chart.axis.CategoryAxis;
 import org.jfree.chart.axis.CategoryLabelPositions;
 import org.jfree.chart.axis.NumberAxis;
@@ -62,6 +63,15 @@ import org.jfree.ui.RefineryUtilities;
  * A simple demonstration application showing how to create a bar chart.
  */
 public class BarChartDemo1 extends ApplicationFrame {
+
+    private static final long serialVersionUID = 1L;
+
+    {
+        // set a theme using the new shadow generator feature available in
+        // 1.0.14 - for backwards compatibility it is not enabled by default
+        ChartFactory.setChartTheme(new StandardChartTheme("JFree/Shadow",
+                true));
+    }
 
     /**
      * Creates a new demo instance.
