@@ -46,6 +46,7 @@ import javax.swing.JPanel;
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
+import org.jfree.chart.StandardChartTheme;
 import org.jfree.chart.plot.PiePlot;
 import org.jfree.data.general.DefaultPieDataset;
 import org.jfree.data.general.PieDataset;
@@ -57,6 +58,15 @@ import org.jfree.ui.RefineryUtilities;
  * data from a {@link DefaultPieDataset}.
  */
 public class PieChartDemo1 extends ApplicationFrame {
+
+    private static final long serialVersionUID = 1L;
+
+    {
+        // set a theme using the new shadow generator feature available in
+        // 1.0.14 - for backwards compatibility it is not enabled by default
+        ChartFactory.setChartTheme(new StandardChartTheme("JFree/Shadow",
+                true));
+    }
 
     /**
      * Default constructor.
